src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement SEMICOLON
Rule 2     program -> program statement SEMICOLON
Rule 3     statement -> dryrun_opt query
Rule 4     dryrun_opt -> DRYRUN
Rule 5     dryrun_opt -> empty
Rule 6     query -> select_query
Rule 7     query -> delete_query
Rule 8     query -> move_query
Rule 9     query -> copy_query
Rule 10    select_query -> SELECT column_list FROM STRING where_clause order_clause limit_clause
Rule 11    delete_query -> DELETE FROM STRING where_clause limit_clause
Rule 12    move_query -> MOVE FROM STRING TO STRING where_clause limit_clause
Rule 13    copy_query -> COPY FROM STRING TO STRING where_clause limit_clause
Rule 14    column_list -> STAR
Rule 15    column_list -> id_list
Rule 16    id_list -> ID
Rule 17    id_list -> ID COMMA id_list
Rule 18    where_clause -> WHERE condition
Rule 19    where_clause -> empty
Rule 20    condition -> condition AND condition
Rule 21    condition -> condition OR condition
Rule 22    condition -> NOT condition
Rule 23    condition -> LPAREN condition RPAREN
Rule 24    condition -> ID OPERATOR value
Rule 25    condition -> ID LIKE STRING
Rule 26    value -> STRING
Rule 27    value -> NUMBER
Rule 28    value -> NUMBER SIZE_UNIT
Rule 29    order_clause -> ORDER BY ID
Rule 30    order_clause -> ORDER BY ID ASC
Rule 31    order_clause -> ORDER BY ID DESC
Rule 32    order_clause -> empty
Rule 33    limit_clause -> LIMIT NUMBER
Rule 34    limit_clause -> empty
Rule 35    empty -> <empty>

Terminals, with rules where they appear

AND                  : 20
ASC                  : 30
BY                   : 29 30 31
COMMA                : 17
COPY                 : 13
DELETE               : 11
DESC                 : 31
DRYRUN               : 4
FROM                 : 10 11 12 13
ID                   : 16 17 24 25 29 30 31
LIKE                 : 25
LIMIT                : 33
LPAREN               : 23
MOVE                 : 12
NOT                  : 22
NUMBER               : 27 28 33
OPERATOR             : 24
OR                   : 21
ORDER                : 29 30 31
RPAREN               : 23
SELECT               : 10
SEMICOLON            : 1 2
SIZE_UNIT            : 28
STAR                 : 14
STRING               : 10 11 12 12 13 13 25 26
TO                   : 12 13
WHERE                : 18
error                : 

Nonterminals, with rules where they appear

column_list          : 10
condition            : 18 20 20 21 21 22 23
copy_query           : 9
delete_query         : 7
dryrun_opt           : 3
empty                : 5 19 32 34
id_list              : 15 17
limit_clause         : 10 11 12 13
move_query           : 8
order_clause         : 10
program              : 2 0
query                : 3
select_query         : 6
statement            : 1 2
value                : 24
where_clause         : 10 11 12 13

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement SEMICOLON
    (2) program -> . program statement SEMICOLON
    (3) statement -> . dryrun_opt query
    (4) dryrun_opt -> . DRYRUN
    (5) dryrun_opt -> . empty
    (35) empty -> .

    DRYRUN          shift and go to state 4
    SELECT          reduce using rule 35 (empty -> .)
    DELETE          reduce using rule 35 (empty -> .)
    MOVE            reduce using rule 35 (empty -> .)
    COPY            reduce using rule 35 (empty -> .)

    program                        shift and go to state 1
    statement                      shift and go to state 2
    dryrun_opt                     shift and go to state 3
    empty                          shift and go to state 5

state 1

    (0) S' -> program .
    (2) program -> program . statement SEMICOLON
    (3) statement -> . dryrun_opt query
    (4) dryrun_opt -> . DRYRUN
    (5) dryrun_opt -> . empty
    (35) empty -> .

    DRYRUN          shift and go to state 4
    SELECT          reduce using rule 35 (empty -> .)
    DELETE          reduce using rule 35 (empty -> .)
    MOVE            reduce using rule 35 (empty -> .)
    COPY            reduce using rule 35 (empty -> .)

    statement                      shift and go to state 6
    dryrun_opt                     shift and go to state 3
    empty                          shift and go to state 5

state 2

    (1) program -> statement . SEMICOLON

    SEMICOLON       shift and go to state 7


state 3

    (3) statement -> dryrun_opt . query
    (6) query -> . select_query
    (7) query -> . delete_query
    (8) query -> . move_query
    (9) query -> . copy_query
    (10) select_query -> . SELECT column_list FROM STRING where_clause order_clause limit_clause
    (11) delete_query -> . DELETE FROM STRING where_clause limit_clause
    (12) move_query -> . MOVE FROM STRING TO STRING where_clause limit_clause
    (13) copy_query -> . COPY FROM STRING TO STRING where_clause limit_clause

    SELECT          shift and go to state 13
    DELETE          shift and go to state 14
    MOVE            shift and go to state 15
    COPY            shift and go to state 16

    query                          shift and go to state 8
    select_query                   shift and go to state 9
    delete_query                   shift and go to state 10
    move_query                     shift and go to state 11
    copy_query                     shift and go to state 12

state 4

    (4) dryrun_opt -> DRYRUN .

    SELECT          reduce using rule 4 (dryrun_opt -> DRYRUN .)
    DELETE          reduce using rule 4 (dryrun_opt -> DRYRUN .)
    MOVE            reduce using rule 4 (dryrun_opt -> DRYRUN .)
    COPY            reduce using rule 4 (dryrun_opt -> DRYRUN .)


state 5

    (5) dryrun_opt -> empty .

    SELECT          reduce using rule 5 (dryrun_opt -> empty .)
    DELETE          reduce using rule 5 (dryrun_opt -> empty .)
    MOVE            reduce using rule 5 (dryrun_opt -> empty .)
    COPY            reduce using rule 5 (dryrun_opt -> empty .)


state 6

    (2) program -> program statement . SEMICOLON

    SEMICOLON       shift and go to state 17


state 7

    (1) program -> statement SEMICOLON .

    DRYRUN          reduce using rule 1 (program -> statement SEMICOLON .)
    $end            reduce using rule 1 (program -> statement SEMICOLON .)
    SELECT          reduce using rule 1 (program -> statement SEMICOLON .)
    DELETE          reduce using rule 1 (program -> statement SEMICOLON .)
    MOVE            reduce using rule 1 (program -> statement SEMICOLON .)
    COPY            reduce using rule 1 (program -> statement SEMICOLON .)


state 8

    (3) statement -> dryrun_opt query .

    SEMICOLON       reduce using rule 3 (statement -> dryrun_opt query .)


state 9

    (6) query -> select_query .

    SEMICOLON       reduce using rule 6 (query -> select_query .)


state 10

    (7) query -> delete_query .

    SEMICOLON       reduce using rule 7 (query -> delete_query .)


state 11

    (8) query -> move_query .

    SEMICOLON       reduce using rule 8 (query -> move_query .)


state 12

    (9) query -> copy_query .

    SEMICOLON       reduce using rule 9 (query -> copy_query .)


state 13

    (10) select_query -> SELECT . column_list FROM STRING where_clause order_clause limit_clause
    (14) column_list -> . STAR
    (15) column_list -> . id_list
    (16) id_list -> . ID
    (17) id_list -> . ID COMMA id_list

    STAR            shift and go to state 19
    ID              shift and go to state 21

    column_list                    shift and go to state 18
    id_list                        shift and go to state 20

state 14

    (11) delete_query -> DELETE . FROM STRING where_clause limit_clause

    FROM            shift and go to state 22


state 15

    (12) move_query -> MOVE . FROM STRING TO STRING where_clause limit_clause

    FROM            shift and go to state 23


state 16

    (13) copy_query -> COPY . FROM STRING TO STRING where_clause limit_clause

    FROM            shift and go to state 24


state 17

    (2) program -> program statement SEMICOLON .

    DRYRUN          reduce using rule 2 (program -> program statement SEMICOLON .)
    $end            reduce using rule 2 (program -> program statement SEMICOLON .)
    SELECT          reduce using rule 2 (program -> program statement SEMICOLON .)
    DELETE          reduce using rule 2 (program -> program statement SEMICOLON .)
    MOVE            reduce using rule 2 (program -> program statement SEMICOLON .)
    COPY            reduce using rule 2 (program -> program statement SEMICOLON .)


state 18

    (10) select_query -> SELECT column_list . FROM STRING where_clause order_clause limit_clause

    FROM            shift and go to state 25


state 19

    (14) column_list -> STAR .

    FROM            reduce using rule 14 (column_list -> STAR .)


state 20

    (15) column_list -> id_list .

    FROM            reduce using rule 15 (column_list -> id_list .)


state 21

    (16) id_list -> ID .
    (17) id_list -> ID . COMMA id_list

    FROM            reduce using rule 16 (id_list -> ID .)
    COMMA           shift and go to state 26


state 22

    (11) delete_query -> DELETE FROM . STRING where_clause limit_clause

    STRING          shift and go to state 27


state 23

    (12) move_query -> MOVE FROM . STRING TO STRING where_clause limit_clause

    STRING          shift and go to state 28


state 24

    (13) copy_query -> COPY FROM . STRING TO STRING where_clause limit_clause

    STRING          shift and go to state 29


state 25

    (10) select_query -> SELECT column_list FROM . STRING where_clause order_clause limit_clause

    STRING          shift and go to state 30


state 26

    (17) id_list -> ID COMMA . id_list
    (16) id_list -> . ID
    (17) id_list -> . ID COMMA id_list

    ID              shift and go to state 21

    id_list                        shift and go to state 31

state 27

    (11) delete_query -> DELETE FROM STRING . where_clause limit_clause
    (18) where_clause -> . WHERE condition
    (19) where_clause -> . empty
    (35) empty -> .

    WHERE           shift and go to state 33
    LIMIT           reduce using rule 35 (empty -> .)
    SEMICOLON       reduce using rule 35 (empty -> .)

    where_clause                   shift and go to state 32
    empty                          shift and go to state 34

state 28

    (12) move_query -> MOVE FROM STRING . TO STRING where_clause limit_clause

    TO              shift and go to state 35


state 29

    (13) copy_query -> COPY FROM STRING . TO STRING where_clause limit_clause

    TO              shift and go to state 36


state 30

    (10) select_query -> SELECT column_list FROM STRING . where_clause order_clause limit_clause
    (18) where_clause -> . WHERE condition
    (19) where_clause -> . empty
    (35) empty -> .

    WHERE           shift and go to state 33
    ORDER           reduce using rule 35 (empty -> .)
    LIMIT           reduce using rule 35 (empty -> .)
    SEMICOLON       reduce using rule 35 (empty -> .)

    where_clause                   shift and go to state 37
    empty                          shift and go to state 34

state 31

    (17) id_list -> ID COMMA id_list .

    FROM            reduce using rule 17 (id_list -> ID COMMA id_list .)


state 32

    (11) delete_query -> DELETE FROM STRING where_clause . limit_clause
    (33) limit_clause -> . LIMIT NUMBER
    (34) limit_clause -> . empty
    (35) empty -> .

    LIMIT           shift and go to state 39
    SEMICOLON       reduce using rule 35 (empty -> .)

    limit_clause                   shift and go to state 38
    empty                          shift and go to state 40

state 33

    (18) where_clause -> WHERE . condition
    (20) condition -> . condition AND condition
    (21) condition -> . condition OR condition
    (22) condition -> . NOT condition
    (23) condition -> . LPAREN condition RPAREN
    (24) condition -> . ID OPERATOR value
    (25) condition -> . ID LIKE STRING

    NOT             shift and go to state 42
    LPAREN          shift and go to state 43
    ID              shift and go to state 44

    condition                      shift and go to state 41

state 34

    (19) where_clause -> empty .

    LIMIT           reduce using rule 19 (where_clause -> empty .)
    SEMICOLON       reduce using rule 19 (where_clause -> empty .)
    ORDER           reduce using rule 19 (where_clause -> empty .)


state 35

    (12) move_query -> MOVE FROM STRING TO . STRING where_clause limit_clause

    STRING          shift and go to state 45


state 36

    (13) copy_query -> COPY FROM STRING TO . STRING where_clause limit_clause

    STRING          shift and go to state 46


state 37

    (10) select_query -> SELECT column_list FROM STRING where_clause . order_clause limit_clause
    (29) order_clause -> . ORDER BY ID
    (30) order_clause -> . ORDER BY ID ASC
    (31) order_clause -> . ORDER BY ID DESC
    (32) order_clause -> . empty
    (35) empty -> .

    ORDER           shift and go to state 48
    LIMIT           reduce using rule 35 (empty -> .)
    SEMICOLON       reduce using rule 35 (empty -> .)

    order_clause                   shift and go to state 47
    empty                          shift and go to state 49

state 38

    (11) delete_query -> DELETE FROM STRING where_clause limit_clause .

    SEMICOLON       reduce using rule 11 (delete_query -> DELETE FROM STRING where_clause limit_clause .)


state 39

    (33) limit_clause -> LIMIT . NUMBER

    NUMBER          shift and go to state 50


state 40

    (34) limit_clause -> empty .

    SEMICOLON       reduce using rule 34 (limit_clause -> empty .)


state 41

    (18) where_clause -> WHERE condition .
    (20) condition -> condition . AND condition
    (21) condition -> condition . OR condition

    LIMIT           reduce using rule 18 (where_clause -> WHERE condition .)
    SEMICOLON       reduce using rule 18 (where_clause -> WHERE condition .)
    ORDER           reduce using rule 18 (where_clause -> WHERE condition .)
    AND             shift and go to state 51
    OR              shift and go to state 52


state 42

    (22) condition -> NOT . condition
    (20) condition -> . condition AND condition
    (21) condition -> . condition OR condition
    (22) condition -> . NOT condition
    (23) condition -> . LPAREN condition RPAREN
    (24) condition -> . ID OPERATOR value
    (25) condition -> . ID LIKE STRING

    NOT             shift and go to state 42
    LPAREN          shift and go to state 43
    ID              shift and go to state 44

    condition                      shift and go to state 53

state 43

    (23) condition -> LPAREN . condition RPAREN
    (20) condition -> . condition AND condition
    (21) condition -> . condition OR condition
    (22) condition -> . NOT condition
    (23) condition -> . LPAREN condition RPAREN
    (24) condition -> . ID OPERATOR value
    (25) condition -> . ID LIKE STRING

    NOT             shift and go to state 42
    LPAREN          shift and go to state 43
    ID              shift and go to state 44

    condition                      shift and go to state 54

state 44

    (24) condition -> ID . OPERATOR value
    (25) condition -> ID . LIKE STRING

    OPERATOR        shift and go to state 55
    LIKE            shift and go to state 56


state 45

    (12) move_query -> MOVE FROM STRING TO STRING . where_clause limit_clause
    (18) where_clause -> . WHERE condition
    (19) where_clause -> . empty
    (35) empty -> .

    WHERE           shift and go to state 33
    LIMIT           reduce using rule 35 (empty -> .)
    SEMICOLON       reduce using rule 35 (empty -> .)

    where_clause                   shift and go to state 57
    empty                          shift and go to state 34

state 46

    (13) copy_query -> COPY FROM STRING TO STRING . where_clause limit_clause
    (18) where_clause -> . WHERE condition
    (19) where_clause -> . empty
    (35) empty -> .

    WHERE           shift and go to state 33
    LIMIT           reduce using rule 35 (empty -> .)
    SEMICOLON       reduce using rule 35 (empty -> .)

    where_clause                   shift and go to state 58
    empty                          shift and go to state 34

state 47

    (10) select_query -> SELECT column_list FROM STRING where_clause order_clause . limit_clause
    (33) limit_clause -> . LIMIT NUMBER
    (34) limit_clause -> . empty
    (35) empty -> .

    LIMIT           shift and go to state 39
    SEMICOLON       reduce using rule 35 (empty -> .)

    limit_clause                   shift and go to state 59
    empty                          shift and go to state 40

state 48

    (29) order_clause -> ORDER . BY ID
    (30) order_clause -> ORDER . BY ID ASC
    (31) order_clause -> ORDER . BY ID DESC

    BY              shift and go to state 60


state 49

    (32) order_clause -> empty .

    LIMIT           reduce using rule 32 (order_clause -> empty .)
    SEMICOLON       reduce using rule 32 (order_clause -> empty .)


state 50

    (33) limit_clause -> LIMIT NUMBER .

    SEMICOLON       reduce using rule 33 (limit_clause -> LIMIT NUMBER .)


state 51

    (20) condition -> condition AND . condition
    (20) condition -> . condition AND condition
    (21) condition -> . condition OR condition
    (22) condition -> . NOT condition
    (23) condition -> . LPAREN condition RPAREN
    (24) condition -> . ID OPERATOR value
    (25) condition -> . ID LIKE STRING

    NOT             shift and go to state 42
    LPAREN          shift and go to state 43
    ID              shift and go to state 44

    condition                      shift and go to state 61

state 52

    (21) condition -> condition OR . condition
    (20) condition -> . condition AND condition
    (21) condition -> . condition OR condition
    (22) condition -> . NOT condition
    (23) condition -> . LPAREN condition RPAREN
    (24) condition -> . ID OPERATOR value
    (25) condition -> . ID LIKE STRING

    NOT             shift and go to state 42
    LPAREN          shift and go to state 43
    ID              shift and go to state 44

    condition                      shift and go to state 62

state 53

    (22) condition -> NOT condition .
    (20) condition -> condition . AND condition
    (21) condition -> condition . OR condition

    AND             reduce using rule 22 (condition -> NOT condition .)
    OR              reduce using rule 22 (condition -> NOT condition .)
    LIMIT           reduce using rule 22 (condition -> NOT condition .)
    SEMICOLON       reduce using rule 22 (condition -> NOT condition .)
    ORDER           reduce using rule 22 (condition -> NOT condition .)
    RPAREN          reduce using rule 22 (condition -> NOT condition .)

  ! AND             [ shift and go to state 51 ]
  ! OR              [ shift and go to state 52 ]


state 54

    (23) condition -> LPAREN condition . RPAREN
    (20) condition -> condition . AND condition
    (21) condition -> condition . OR condition

    RPAREN          shift and go to state 63
    AND             shift and go to state 51
    OR              shift and go to state 52


state 55

    (24) condition -> ID OPERATOR . value
    (26) value -> . STRING
    (27) value -> . NUMBER
    (28) value -> . NUMBER SIZE_UNIT

    STRING          shift and go to state 65
    NUMBER          shift and go to state 66

    value                          shift and go to state 64

state 56

    (25) condition -> ID LIKE . STRING

    STRING          shift and go to state 67


state 57

    (12) move_query -> MOVE FROM STRING TO STRING where_clause . limit_clause
    (33) limit_clause -> . LIMIT NUMBER
    (34) limit_clause -> . empty
    (35) empty -> .

    LIMIT           shift and go to state 39
    SEMICOLON       reduce using rule 35 (empty -> .)

    limit_clause                   shift and go to state 68
    empty                          shift and go to state 40

state 58

    (13) copy_query -> COPY FROM STRING TO STRING where_clause . limit_clause
    (33) limit_clause -> . LIMIT NUMBER
    (34) limit_clause -> . empty
    (35) empty -> .

    LIMIT           shift and go to state 39
    SEMICOLON       reduce using rule 35 (empty -> .)

    limit_clause                   shift and go to state 69
    empty                          shift and go to state 40

state 59

    (10) select_query -> SELECT column_list FROM STRING where_clause order_clause limit_clause .

    SEMICOLON       reduce using rule 10 (select_query -> SELECT column_list FROM STRING where_clause order_clause limit_clause .)


state 60

    (29) order_clause -> ORDER BY . ID
    (30) order_clause -> ORDER BY . ID ASC
    (31) order_clause -> ORDER BY . ID DESC

    ID              shift and go to state 70


state 61

    (20) condition -> condition AND condition .
    (20) condition -> condition . AND condition
    (21) condition -> condition . OR condition

    AND             reduce using rule 20 (condition -> condition AND condition .)
    OR              reduce using rule 20 (condition -> condition AND condition .)
    LIMIT           reduce using rule 20 (condition -> condition AND condition .)
    SEMICOLON       reduce using rule 20 (condition -> condition AND condition .)
    ORDER           reduce using rule 20 (condition -> condition AND condition .)
    RPAREN          reduce using rule 20 (condition -> condition AND condition .)

  ! AND             [ shift and go to state 51 ]
  ! OR              [ shift and go to state 52 ]


state 62

    (21) condition -> condition OR condition .
    (20) condition -> condition . AND condition
    (21) condition -> condition . OR condition

    OR              reduce using rule 21 (condition -> condition OR condition .)
    LIMIT           reduce using rule 21 (condition -> condition OR condition .)
    SEMICOLON       reduce using rule 21 (condition -> condition OR condition .)
    ORDER           reduce using rule 21 (condition -> condition OR condition .)
    RPAREN          reduce using rule 21 (condition -> condition OR condition .)
    AND             shift and go to state 51

  ! AND             [ reduce using rule 21 (condition -> condition OR condition .) ]
  ! OR              [ shift and go to state 52 ]


state 63

    (23) condition -> LPAREN condition RPAREN .

    AND             reduce using rule 23 (condition -> LPAREN condition RPAREN .)
    OR              reduce using rule 23 (condition -> LPAREN condition RPAREN .)
    LIMIT           reduce using rule 23 (condition -> LPAREN condition RPAREN .)
    SEMICOLON       reduce using rule 23 (condition -> LPAREN condition RPAREN .)
    ORDER           reduce using rule 23 (condition -> LPAREN condition RPAREN .)
    RPAREN          reduce using rule 23 (condition -> LPAREN condition RPAREN .)


state 64

    (24) condition -> ID OPERATOR value .

    AND             reduce using rule 24 (condition -> ID OPERATOR value .)
    OR              reduce using rule 24 (condition -> ID OPERATOR value .)
    LIMIT           reduce using rule 24 (condition -> ID OPERATOR value .)
    SEMICOLON       reduce using rule 24 (condition -> ID OPERATOR value .)
    ORDER           reduce using rule 24 (condition -> ID OPERATOR value .)
    RPAREN          reduce using rule 24 (condition -> ID OPERATOR value .)


state 65

    (26) value -> STRING .

    AND             reduce using rule 26 (value -> STRING .)
    OR              reduce using rule 26 (value -> STRING .)
    LIMIT           reduce using rule 26 (value -> STRING .)
    SEMICOLON       reduce using rule 26 (value -> STRING .)
    ORDER           reduce using rule 26 (value -> STRING .)
    RPAREN          reduce using rule 26 (value -> STRING .)


state 66

    (27) value -> NUMBER .
    (28) value -> NUMBER . SIZE_UNIT

    AND             reduce using rule 27 (value -> NUMBER .)
    OR              reduce using rule 27 (value -> NUMBER .)
    LIMIT           reduce using rule 27 (value -> NUMBER .)
    SEMICOLON       reduce using rule 27 (value -> NUMBER .)
    ORDER           reduce using rule 27 (value -> NUMBER .)
    RPAREN          reduce using rule 27 (value -> NUMBER .)
    SIZE_UNIT       shift and go to state 71


state 67

    (25) condition -> ID LIKE STRING .

    AND             reduce using rule 25 (condition -> ID LIKE STRING .)
    OR              reduce using rule 25 (condition -> ID LIKE STRING .)
    LIMIT           reduce using rule 25 (condition -> ID LIKE STRING .)
    SEMICOLON       reduce using rule 25 (condition -> ID LIKE STRING .)
    ORDER           reduce using rule 25 (condition -> ID LIKE STRING .)
    RPAREN          reduce using rule 25 (condition -> ID LIKE STRING .)


state 68

    (12) move_query -> MOVE FROM STRING TO STRING where_clause limit_clause .

    SEMICOLON       reduce using rule 12 (move_query -> MOVE FROM STRING TO STRING where_clause limit_clause .)


state 69

    (13) copy_query -> COPY FROM STRING TO STRING where_clause limit_clause .

    SEMICOLON       reduce using rule 13 (copy_query -> COPY FROM STRING TO STRING where_clause limit_clause .)


state 70

    (29) order_clause -> ORDER BY ID .
    (30) order_clause -> ORDER BY ID . ASC
    (31) order_clause -> ORDER BY ID . DESC

    LIMIT           reduce using rule 29 (order_clause -> ORDER BY ID .)
    SEMICOLON       reduce using rule 29 (order_clause -> ORDER BY ID .)
    ASC             shift and go to state 72
    DESC            shift and go to state 73


state 71

    (28) value -> NUMBER SIZE_UNIT .

    AND             reduce using rule 28 (value -> NUMBER SIZE_UNIT .)
    OR              reduce using rule 28 (value -> NUMBER SIZE_UNIT .)
    LIMIT           reduce using rule 28 (value -> NUMBER SIZE_UNIT .)
    SEMICOLON       reduce using rule 28 (value -> NUMBER SIZE_UNIT .)
    ORDER           reduce using rule 28 (value -> NUMBER SIZE_UNIT .)
    RPAREN          reduce using rule 28 (value -> NUMBER SIZE_UNIT .)


state 72

    (30) order_clause -> ORDER BY ID ASC .

    LIMIT           reduce using rule 30 (order_clause -> ORDER BY ID ASC .)
    SEMICOLON       reduce using rule 30 (order_clause -> ORDER BY ID ASC .)


state 73

    (31) order_clause -> ORDER BY ID DESC .

    LIMIT           reduce using rule 31 (order_clause -> ORDER BY ID DESC .)
    SEMICOLON       reduce using rule 31 (order_clause -> ORDER BY ID DESC .)

